force-app/main/default/objects/Divisas_contratos__c/Divisas_contratos__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Divisas gestión contratos</label>
</CustomObject>