force-app/main/default/objects/Divisas_contratos__c/fields/Balboa_panamenho__c.field-meta.xml
<CustomField>
    <fullName>Balboa_panamenho__c</fullName>
    <label>Balboa panameño</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>