force-app/main/default/objects/Divisas_contratos__c/fields/Boliviano__c.field-meta.xml
<CustomField>
    <fullName>Boliviano__c</fullName>
    <label>Boliviano</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>