force-app/main/default/objects/Divisas_contratos__c/fields/Corona_noruega__c.field-meta.xml
<CustomField>
    <fullName>Corona_noruega__c</fullName>
    <label>Corona noruega</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>