force-app/main/default/objects/Divisas_contratos__c/fields/Dinar_argelino__c.field-meta.xml
<CustomField>
    <fullName>Dinar_argelino__c</fullName>
    <label>Dinar argelino</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>