force-app/main/default/objects/Divisas_contratos__c/fields/Dirham_marroqu__c.field-meta.xml
<CustomField>
    <fullName>Dirham_marroqu__c</fullName>
    <label>Dirham marroquí</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>