force-app/main/default/objects/Divisas_contratos__c/fields/Dolar__c.field-meta.xml
<CustomField>
    <fullName>Dolar__c</fullName>
    <label>Dólar</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>