force-app/main/default/objects/Divisas_contratos__c/fields/Dong_vietnamita__c.field-meta.xml
<CustomField>
    <fullName>Dong_vietnamita__c</fullName>
    <label>Dong vietnamita</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>