force-app/main/default/objects/Divisas_contratos__c/fields/Euro_europeo__c.field-meta.xml
<CustomField>
    <fullName>Euro_europeo__c</fullName>
    <label>Euro europeo</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>