force-app/main/default/objects/Divisas_contratos__c/fields/Forinto_hungaro__c.field-meta.xml
<CustomField>
    <fullName>Forinto_hungaro__c</fullName>
    <label>Forinto húngaro</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>