force-app/main/default/objects/Divisas_contratos__c/fields/Franco_guineano__c.field-meta.xml
<CustomField>
    <fullName>Franco_guineano__c</fullName>
    <label>Franco guineano</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>