force-app/main/default/objects/Divisas_contratos__c/fields/Grivna__c.field-meta.xml
<CustomField>
    <fullName>Grivna__c</fullName>
    <label>Grivna</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>