force-app/main/default/objects/Divisas_contratos__c/fields/Libra__c.field-meta.xml
<CustomField>
    <fullName>Libra__c</fullName>
    <label>Libra</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>