force-app/main/default/objects/Divisas_contratos__c/fields/Nuevo_sol__c.field-meta.xml
<CustomField>
    <fullName>Nuevo_sol__c</fullName>
    <label>Nuevo sol</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>