force-app/main/default/objects/Divisas_contratos__c/fields/Peso_chileno__c.field-meta.xml
<CustomField>
    <fullName>Peso_chileno__c</fullName>
    <label>Peso chileno</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>