force-app/main/default/objects/Divisas_contratos__c/fields/Peso_colombiano__c.field-meta.xml
<CustomField>
    <fullName>Peso_colombiano__c</fullName>
    <label>Peso colombiano</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>