force-app/main/default/objects/Divisas_contratos__c/fields/Peso_dominicano__c.field-meta.xml
<CustomField>
    <fullName>Peso_dominicano__c</fullName>
    <label>Peso dominicano</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>