force-app/main/default/objects/Divisas_contratos__c/fields/Rand_sudafricano__c.field-meta.xml
<CustomField>
    <fullName>Rand_sudafricano__c</fullName>
    <label>Rand sudafricano</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>