force-app/main/default/objects/Divisas_contratos__c/fields/Real_brasilenho__c.field-meta.xml
<CustomField>
    <fullName>Real_brasilenho__c</fullName>
    <label>Real brasileño</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>