force-app/main/default/objects/Divisas_contratos__c/fields/Rial_omani__c.field-meta.xml
<CustomField>
    <fullName>Rial_omani__c</fullName>
    <label>Rial omaní</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>