force-app/main/default/objects/Divisas_contratos__c/fields/Riyal_saud__c.field-meta.xml
<CustomField>
    <fullName>Riyal_saud__c</fullName>
    <label>Riyal saudí</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>