force-app/main/default/objects/Divisas_contratos__c/fields/Rublo_ruso__c.field-meta.xml
<CustomField>
    <fullName>Rublo_ruso__c</fullName>
    <label>Rublo ruso</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>