force-app/main/default/objects/Divisas_contratos__c/fields/Rupia_india__c.field-meta.xml
<CustomField>
    <fullName>Rupia_india__c</fullName>
    <label>Rupia india</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>