force-app/main/default/objects/Divisas_contratos__c/fields/Taka_bangladeshi__c.field-meta.xml
<CustomField>
    <fullName>Taka_bangladeshi__c</fullName>
    <label>Taka bangladeshí</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>