force-app/main/default/objects/Divisas_contratos__c/fields/Yuan_chino__c.field-meta.xml
<CustomField>
    <fullName>Yuan_chino__c</fullName>
    <label>Yuan chino</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>