force-app/main/default/objects/Divisas_contratos__c/fields/Zloty__c.field-meta.xml
<CustomField>
    <fullName>Zloty__c</fullName>
    <label>Zloty</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>